Title issue : "the product cards need to be aligned relative to the main banner" (#38)
* a1

* some files edited #3

* ffff

* button's double clicking issue fixed

* the product cards need to be aligned relative to the main banner

--- a/src/index.css
+++ b/src/index.css
@@ -386,9 +386,9 @@ hr.button-hr-active {
 
 .carousel-wrapper {
   background-color: #eae4ee;
-  padding-left: 50px;
+  padding-left: 20px;
   padding-top: 50px;
-  padding-right: 50px;
+  padding-right: 30px;
   padding-bottom: 24px;
   box-sizing: border-box;
 }
@@ -587,7 +587,6 @@ hr.button-hr-active {
   outline: none !important;
   transform: scale(1) !important;
 }
-
 .card-img {
   margin: 0 auto;
   position: relative;
